--- a/public/translations/fa.json
+++ b/public/translations/fa.json
@@ -1,108 +1,116 @@
 {
-  "pages.not-found.title": "اوه!",
-  "pages.not-found.subtitle": "صفحه یافت نشد.",
-  "pages.not-found.description": ".صفحه ای که به دنبال آن هستید ممکن است حذف، یا نام آن تغییر و یا به طور موقت خارج از دسترس باشد.",
-  "pages.not-found.go-to-home": "رفتن به خانه",
-  "routes.home.name": "خانه",
-  "routes.downloads.name": "بارگیری‌ها",
-  "routes.faq.name": "سوالات متداول",
-  "routes.themes.name": "تم‌ها",
-  "general.other": "سایر موارد",
-  "pages.home.hero.title": "بارگیری لانچر فریزم",
-  "pages.home.hero.description": "لانچر فریزم به شما اجازه می دهد تا بدون هیچ گونه محدودیتی بتوانید با اکانت آفلاین بازی کنید.",
-  "pages.home.hero.download-now": "همین حالا دانلود کنید",
-  "pages.home.features.more-auth-servers.title": "سرور های احراز هویت بیشتر",
-  "pages.home.features.more-auth-servers.description": "بدون هیچ گونه محدودیتی با اکانت آفلاین یا از سرور های شخصی احراز هویت مانند «Ely.by» استفاده کنید. ",
-  "pages.home.features.customization.title": "شخصی سازی",
-  "pages.home.features.customization.description": " فریزم دارای تم خود با رنگ «catppuccin» و آیکون «Fluent» مایکروسافت است، همچنین به شما اجازه می دهد بسته‌های گربه متحرک را با پشتیبانی از برش پس‌زمینه تنظیم کنید.",
-  "pages.home.features.prism.title": "بر پایه پریزم",
-  "pages.home.features.prism.description": "فریزم بر پایه کد پریزم لانچر ساخته شده است، بنابراین می تواند انتظار تمامی قابلیت‌های پریزم، مانند مدیریت مودپک‌ها و نمایه‌ها را داشته باشید",
-  "pages.home.features.other.title": "قابلیت‌های دیگر",
-  "pages.home.features.other.description": "به طور خودکار از اسکرین‌شات‌های درون بازی در تاریخچه بافر خود کپی کنید، نمایه در حال بازی خود را در دیسکورد نشان دهید، با اسکین‌های «Ely.by» در هر جایی بازی کنید و موارد بیشتر!",
-  "pages.home.team.maintainers.title": "نگهدارندگان",
-  "pages.home.team.maintainers.list.so5iso4ka.description":" علاقه مند به ++C",
-  "pages.home.team.maintainers.list.kaeeraa.description": "حل کننده مشکلات در قلب, علاقه مند به لینوکس «NixOS» و برنامه‌های متن باز .",
-  "pages.home.team.maintainers.list.s0me1newithhand7s.description": "علاقه‌مند به نرم‌افزار متن‌باز (OSS)، خالق ایده، نگه‌دارنده‌ی پروژه‌های مربوط به Nix، که با نام hand7 هم شناخته می‌شود.",
-  "pages.home.team.maintainers.list.windstone.description": "عاشق Vue.jsو Svelte 5 و Elysia.js، ",
-  "pages.home.team.contributors.title": "مشارکت کنندگان",
-  "pages.home.team.special.title": "با تشکر ویژه از",
-  "pages.downloads.title": "Downloads",
-  "pages.downloads.description": "Download %s for your specific platform.",
-  "pages.downloads.recommended": "Recommended",
-  "pages.faq.title": "Frequently Asked Questions",
-  "pages.faq.description": "A collection of helpful information for frequent problems when using Freesm Launcher.",
-  "pages.faq.issues.long-launch.title": "Instance launching problems",
-  "pages.faq.issues.long-launch.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. If it didn't work, try changing your Java vendor or version in settings.",
-  "pages.faq.issues.no-versions-available.title": "'No versions are currently available'",
-  "pages.faq.issues.no-versions-available.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. If it didn't work, try putting <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>https://meta.multimc.org/v1/</span><span class='select-none'> </span>in Settings -> APIs -> Metadata Server.",
-  "pages.faq.issues.portable-zip.title": "'Java checker could not be found. Please check your installation'",
-  "pages.faq.issues.portable-zip.description": "You probably downloaded a portable version of the launcher and didn't unzip/unarchive it.",
-  "pages.faq.issues.optifine.title": "How to install OptiFine without a mod loader?",
-  "pages.faq.issues.optifine.description": "<a class='text-sm underline' target='_blank' href='https://www.reddit.com/r/Optifine/comments/jekh7u/comment/ipjqm5o/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button'>Original</a>\n\nExample for 1.8.9:\n* Go into <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>\\FreesmLauncher\\libraries\\com\\mojang\\minecraft\\1.8.9\\</span><span class='select-none'> </span>and copy the minecraft jar file\n* Make a new folder directory <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>%appdata%\\.minecraft\\versions\\1.8.9\\</span><span class='select-none'> </span>and paste the jar in there\n* Then rename the jar you just pasted to 1.8.9.jar\n* Try extracting it and put the extracted file into <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>\\FreesmLauncher\\libraries\\com\\mojang\\minecraft\\1.8.9\\</span>\n",
-  "pages.faq.issues.skins.title": "How to set a skin?",
-  "pages.faq.issues.skins.description": "Try using an <a class='underline' target='_blank' href='https://ely.by/'>Ely.by</a> skins system, or install a mod that allows you to change in-game skins.",
-  "pages.faq.issues.microsoft-invalid-login.title": "'status': 'NOT_ENTITLED'",
-  "pages.faq.issues.microsoft-invalid-login.description": "Don't sign in using a Microsoft account if you didn't buy the game. You need to use an 'Offline'/'Ely.by' option in account settings in this case (servers will still work).",
-  "pages.faq.issues.no-languages.title": "Why is there only an english language in the launcher?",
-  "pages.faq.issues.no-languages.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>.",
-  "pages.faq.issues.cat-pack-quality.title": "My cat packs have a bit lower quality when using them in Freesm",
-  "pages.faq.issues.cat-pack-quality.description": "Will be fixed in the future ^.^",
-  "pages.faq.issues.other.title": "Still doesn't work/Other issues",
-  "pages.faq.issues.other.description": "Check <a class='underline' href='https://prismlauncher.org/wiki/overview/frequent-issues' target='_blank'>Prism Launcher FAQ</a> or try contacting us at <a class='underline' href='https://discord.com/invite/6jjw4gjy4w' target='_blank'>Discord</a> or <a class='underline' href='https://t.me/freesmsupport' target='_blank'>Telegram</a>.",
-  "pages.themes.title": "",
-  "pages.themes.description": "",
-  "footer.short-description": "راهی دیگر برای بازی کردن ماینکرفت",
-  "footer.about.title": "درباره",
-  "footer.about.link.contribute": "مشارکت",
-  "footer.about.link.faq": "سوالات متداول",
-  "footer.about.link.download": "بارگیری",
-  "footer.community.title": "جامعه",
-  "footer.community.link.telegram-channel": "کانال تلگرام",
-  "footer.community.link.telegram-chat": "گپ تلگرام",
-  "footer.community.link.discord": "Discord",
-  "footer.project.title": "پروژه",
-  "footer.project.source-code": "کد منبع",
-  "footer.project.github-issues": "مسائل گیت‌هاب",
-  "footer.project.website": "کد وبسایت",
-  "launcher.add-instance": "اضافه کردن کپی",
-  "launcher.folders": "پوشه ها",
-  "launcher.settings": "تنظیمات",
-  "launcher.help": "راهنما",
-  "launcher.update": "بروزرسانی",
-  "launcher.no-default-account": "بدون حساب پیشفرض",
-  "launcher.accounts": "حساب ها",
-  "launcher.manage-accounts": "مدیریت حساب...",
-  "launcher.more-news": "اخبار بیشتر",
-  "launcher.website-in-vue": "This website was written in Vue <3",
-  "launcher.maintainer": "Maintainer",
-  "launcher.profile-hotkey": "Ctrl+0",
-  "launcher.ungrouped": "Ungrouped",
-  "launcher.placeholder-group": "Placeholders",
-  "launcher.launch": "اجرا",
-  "launcher.kill": "سقط",
-  "launcher.edit": "Edit",
-  "launcher.change-group": "تغییر گروه",
-  "launcher.folder": "Folder",
-  "launcher.export": "Export",
-  "launcher.copy": "Copy",
-  "launcher.delete": "Delete",
-  "launcher.create-shortcut": "Create Shortcut",
-  "launcher.rename": "تغییر نام",
-  "launcher.change-icon": "تغییر آیکن",
-  "launcher.confirm-deletion.title": " تائید حذف شدن ",
-  "launcher.confirm-deletion.description": "You are about to delete «%s».\nThis may be permanent and will completely delete the instance.\n\nAre you sure?",
-  "launcher.yes": "Yes",
-  "launcher.no": "No",
-  "launcher.no-instance-selection": "No instance selected",
-  "launcher.specific-time-played": "total played for",
-  "launcher.time-played": "Time played",
-  "launcher.minutes-short": "min",
-  "launcher.seconds-short": "s",
-  "launcher.news-toggle": "News Toolbar",
-  "launcher.status-toggle": "Status Toolbar",
-  "launcher.instance-toggle": "Instance Toolbar",
-  "users.windstone_": "windstone_",
-  "users.hand7s": "hand7s",
-  "users.kaeeraa": "kaeeraa",
-  "users.so5iso4ka": "so5iso4ka"
+  "Info": {
+    "Code": "fa",
+    "Name": "فارسی",
+    "Flag": "\uD83C\uDDEE\uD83C\uDDF7",
+    "RTL" : true
+  },
+  "Messages": {
+    "pages.not-found.title": "اوه!",
+    "pages.not-found.subtitle": "صفحه یافت نشد.",
+    "pages.not-found.description": ".صفحه ای که به دنبال آن هستید ممکن است حذف، یا نام آن تغییر و یا به طور موقت خارج از دسترس باشد.",
+    "pages.not-found.go-to-home": "رفتن به خانه",
+    "routes.home.name": "خانه",
+    "routes.downloads.name": "بارگیری‌ها",
+    "routes.faq.name": "سوالات متداول",
+    "routes.themes.name": "تم‌ها",
+    "general.other": "سایر موارد",
+    "pages.home.hero.title": "بارگیری لانچر فریزم",
+    "pages.home.hero.description": "لانچر فریزم به شما اجازه می دهد تا بدون هیچ گونه محدودیتی بتوانید با اکانت آفلاین بازی کنید.",
+    "pages.home.hero.download-now": "همین حالا دانلود کنید",
+    "pages.home.features.more-auth-servers.title": "سرور های احراز هویت بیشتر",
+    "pages.home.features.more-auth-servers.description": "بدون هیچ گونه محدودیتی با اکانت آفلاین یا از سرور های شخصی احراز هویت مانند «Ely.by» استفاده کنید. ",
+    "pages.home.features.customization.title": "شخصی سازی",
+    "pages.home.features.customization.description": " فریزم دارای تم خود با رنگ «catppuccin» و آیکون «Fluent» مایکروسافت است، همچنین به شما اجازه می دهد بسته‌های گربه متحرک را با پشتیبانی از برش پس‌زمینه تنظیم کنید.",
+    "pages.home.features.prism.title": "بر پایه پریزم",
+    "pages.home.features.prism.description": "فریزم بر پایه کد پریزم لانچر ساخته شده است، بنابراین می تواند انتظار تمامی قابلیت‌های پریزم، مانند مدیریت مودپک‌ها و نمایه‌ها را داشته باشید",
+    "pages.home.features.other.title": "قابلیت‌های دیگر",
+    "pages.home.features.other.description": "به طور خودکار از اسکرین‌شات‌های درون بازی در تاریخچه بافر خود کپی کنید، نمایه در حال بازی خود را در دیسکورد نشان دهید، با اسکین‌های «Ely.by» در هر جایی بازی کنید و موارد بیشتر!",
+    "pages.home.team.maintainers.title": "نگهدارندگان",
+    "pages.home.team.maintainers.list.so5iso4ka.description":" علاقه مند به ++C",
+    "pages.home.team.maintainers.list.kaeeraa.description": "حل کننده مشکلات در قلب, علاقه مند به لینوکس «NixOS» و برنامه‌های متن باز .",
+    "pages.home.team.maintainers.list.s0me1newithhand7s.description": "علاقه‌مند به نرم‌افزار متن‌باز (OSS)، خالق ایده، نگه‌دارنده‌ی پروژه‌های مربوط به Nix، که با نام hand7 هم شناخته می‌شود.",
+    "pages.home.team.maintainers.list.windstone.description": "عاشق Vue.jsو Svelte 5 و Elysia.js، ",
+    "pages.home.team.contributors.title": "مشارکت کنندگان",
+    "pages.home.team.special.title": "با تشکر ویژه از",
+    "pages.downloads.title": "Downloads",
+    "pages.downloads.description": "Download %s for your specific platform.",
+    "pages.downloads.recommended": "Recommended",
+    "pages.faq.title": "Frequently Asked Questions",
+    "pages.faq.description": "A collection of helpful information for frequent problems when using Freesm Launcher.",
+    "pages.faq.issues.long-launch.title": "Instance launching problems",
+    "pages.faq.issues.long-launch.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. If it didn't work, try changing your Java vendor or version in settings.",
+    "pages.faq.issues.no-versions-available.title": "'No versions are currently available'",
+    "pages.faq.issues.no-versions-available.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>. If it didn't work, try putting <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>https://meta.multimc.org/v1/</span><span class='select-none'> </span>in Settings -> APIs -> Metadata Server.",
+    "pages.faq.issues.portable-zip.title": "'Java checker could not be found. Please check your installation'",
+    "pages.faq.issues.portable-zip.description": "You probably downloaded a portable version of the launcher and didn't unzip/unarchive it.",
+    "pages.faq.issues.optifine.title": "How to install OptiFine without a mod loader?",
+    "pages.faq.issues.optifine.description": "<a class='text-sm underline' target='_blank' href='https://www.reddit.com/r/Optifine/comments/jekh7u/comment/ipjqm5o/?utm_source=share&utm_medium=web3x&utm_name=web3xcss&utm_term=1&utm_content=share_button'>Original</a>\n\nExample for 1.8.9:\n* Go into <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>\\FreesmLauncher\\libraries\\com\\mojang\\minecraft\\1.8.9\\</span><span class='select-none'> </span>and copy the minecraft jar file\n* Make a new folder directory <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>%appdata%\\.minecraft\\versions\\1.8.9\\</span><span class='select-none'> </span>and paste the jar in there\n* Then rename the jar you just pasted to 1.8.9.jar\n* Try extracting it and put the extracted file into <span class='bg-catppuccin-800 text-sm p-2 rounded-md'>\\FreesmLauncher\\libraries\\com\\mojang\\minecraft\\1.8.9\\</span>\n",
+    "pages.faq.issues.skins.title": "How to set a skin?",
+    "pages.faq.issues.skins.description": "Try using an <a class='underline' target='_blank' href='https://ely.by/'>Ely.by</a> skins system, or install a mod that allows you to change in-game skins.",
+    "pages.faq.issues.microsoft-invalid-login.title": "'status': 'NOT_ENTITLED'",
+    "pages.faq.issues.microsoft-invalid-login.description": "Don't sign in using a Microsoft account if you didn't buy the game. You need to use an 'Offline'/'Ely.by' option in account settings in this case (servers will still work).",
+    "pages.faq.issues.no-languages.title": "Why is there only an english language in the launcher?",
+    "pages.faq.issues.no-languages.description": "Try enabling or disabling your VPN or <a class='underline' target='_blank' href='https://github.com/bol-van/zapret'>zapret</a>.",
+    "pages.faq.issues.cat-pack-quality.title": "My cat packs have a bit lower quality when using them in Freesm",
+    "pages.faq.issues.cat-pack-quality.description": "Will be fixed in the future ^.^",
+    "pages.faq.issues.other.title": "Still doesn't work/Other issues",
+    "pages.faq.issues.other.description": "Check <a class='underline' href='https://prismlauncher.org/wiki/overview/frequent-issues' target='_blank'>Prism Launcher FAQ</a> or try contacting us at <a class='underline' href='https://discord.com/invite/6jjw4gjy4w' target='_blank'>Discord</a> or <a class='underline' href='https://t.me/freesmsupport' target='_blank'>Telegram</a>.",
+    "pages.themes.title": "",
+    "pages.themes.description": "",
+    "footer.short-description": "راهی دیگر برای بازی کردن ماینکرفت",
+    "footer.about.title": "درباره",
+    "footer.about.link.contribute": "مشارکت",
+    "footer.about.link.faq": "سوالات متداول",
+    "footer.about.link.download": "بارگیری",
+    "footer.community.title": "جامعه",
+    "footer.community.link.telegram-channel": "کانال تلگرام",
+    "footer.community.link.telegram-chat": "گپ تلگرام",
+    "footer.community.link.discord": "Discord",
+    "footer.project.title": "پروژه",
+    "footer.project.source-code": "کد منبع",
+    "footer.project.github-issues": "مسائل گیت‌هاب",
+    "footer.project.website": "کد وبسایت",
+    "launcher.add-instance": "اضافه کردن کپی",
+    "launcher.folders": "پوشه ها",
+    "launcher.settings": "تنظیمات",
+    "launcher.help": "راهنما",
+    "launcher.update": "بروزرسانی",
+    "launcher.no-default-account": "بدون حساب پیشفرض",
+    "launcher.accounts": "حساب ها",
+    "launcher.manage-accounts": "مدیریت حساب...",
+    "launcher.more-news": "اخبار بیشتر",
+    "launcher.website-in-vue": "This website was written in Vue <3",
+    "launcher.maintainer": "Maintainer",
+    "launcher.profile-hotkey": "Ctrl+0",
+    "launcher.ungrouped": "Ungrouped",
+    "launcher.placeholder-group": "Placeholders",
+    "launcher.launch": "اجرا",
+    "launcher.kill": "سقط",
+    "launcher.edit": "Edit",
+    "launcher.change-group": "تغییر گروه",
+    "launcher.folder": "Folder",
+    "launcher.export": "Export",
+    "launcher.copy": "Copy",
+    "launcher.delete": "Delete",
+    "launcher.create-shortcut": "Create Shortcut",
+    "launcher.rename": "تغییر نام",
+    "launcher.change-icon": "تغییر آیکن",
+    "launcher.confirm-deletion.title": " تائید حذف شدن ",
+    "launcher.confirm-deletion.description": "You are about to delete «%s».\nThis may be permanent and will completely delete the instance.\n\nAre you sure?",
+    "launcher.yes": "Yes",
+    "launcher.no": "No",
+    "launcher.no-instance-selection": "No instance selected",
+    "launcher.specific-time-played": "total played for",
+    "launcher.time-played": "Time played",
+    "launcher.minutes-short": "min",
+    "launcher.seconds-short": "s",
+    "launcher.news-toggle": "News Toolbar",
+    "launcher.status-toggle": "Status Toolbar",
+    "launcher.instance-toggle": "Instance Toolbar",
+    "users.windstone_": "windstone_",
+    "users.hand7s": "hand7s",
+    "users.kaeeraa": "kaeeraa",
+    "users.so5iso4ka": "so5iso4ka"
+  }
 }
